# llm-red-teaming-framework

./: .dockerignore  .env.example  .gitignore  AI_AUDIT_REPORT.md  API_AUDIT_REPORT.md  DEVOPS_REPORT.md  Dockerfile  FINAL_SYSTEM_REPORT.md  PROJECT_SUMMARY.md  Procfile  README.md  SECURITY_AUDIT_REPORT.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py  llm_client.py  mock_client.py  moderation_client.py  providers.py  rate_limiter.py
api_server/: __init__.py  fast_server.py
attacks/: __init__.py  attack_runner.py  categories.py  gladiator.py  mutators.py  prompt_attacks.py  prompt_generator.py
config/: default.yaml
defense/: basic_filter.py  guardrails.py  safety_keywords.py
evaluation/: __init__.py  alignment_scorer.py  metrics.py  safety_scorer.py  scorer.py  truthfulness_scorer.py
experiment/: db.py  logger.py  reporter.py
experiments/: results_store.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: GladiatorArena.jsx
utils/: __init__.py  formatting.py  hashing.py  text.py  validation.py
